2023-06-27  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* configure.ac, coders/Makefile.am: Jasper is now optionally
	dependent on libheif.

2023-06-27  Przemysław Sobala  <przemyslaw.sobala@gmail.com>

	* magick/GraphicsMagick.pc.in (Libs.private): Fix pkg-config files
	for static build.

2023-06-21  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/topol.c: Fix tile positioning.

2023-06-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/webp.c (ReadWEBPImage): SourceForge patch #77 "Don't
	prepend Exif APP1 header indiscriminately for WebP" by Milos
	Komarcevic.

2023-06-18  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/heif.c (ReadMetadata): Retrieve image orientation from
	EXIF and store in image.

2023-06-18  Przemysław Sobala  <przemyslaw.sobala@gmail.com>

	* coders/png.c (ReadOnePNGImage): Retrieve image orientation from
	EXIF (if present) and store in image.

	* coders/webp.c (ReadWEBPImage): Retrieve image orientation from
	EXIF (if present) and store in image.

2023-06-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Add --no-po4a --no-doxygen to 'xz'
	build to hopefully get it building again in the oss-fuzz builds.

2023-06-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/operator.c (QuantumDepthCB): Fix compilation failure in
	Q32 build.

2023-06-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (TIFFReadErrors): Mask "Internal error, unknown
	tag" errors from TIFFFieldWithTag() which block working with
	anything but development libtiff.

2023-06-04  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/topol.c: More strict check of proper blob data size.
	
2023-06-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (ConvertImageCommand): Skip MogrifyImages() if
	in ping mode.  Addresses Sourceforge issue #704 "heap overflow in
	gm (magick/effect.c:4417 in SpreadImage)".
	
	* magick/effect.c (SpreadImage): Assure that offsets_index is in